# SocketTalk

./: CMakeLists.txt  README.md  client.cpp  dbmanager.cpp  main.cpp  server.cpp
include/: client.h  dbmanager.h  server.h
